add config to use jdbcTemplate

--- a/hackatonstudentpoint/src/main/resources/application.properties
+++ b/hackatonstudentpoint/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=hackatonstudentpoint
+datasource.data.name=doadmin
+datasource.password=AVNS_RmsEVRlB0FUtudcdAuT
+datasource.url=jdbc:mysql://localhost:25060/utp_group_db
