add method get RESTful

--- a/hackatonstudentpoint/src/main/resources/application.properties
+++ b/hackatonstudentpoint/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=hackatonstudentpoint
 datasource.data.name=doadmin
 datasource.password=AVNS_RmsEVRlB0FUtudcdAuT
-datasource.url=jdbc:mysql://localhost:25060/utp_group_db
+datasource.url=jdbc:mysql://db-mysql-nyc3-55609-do-user-16669012-0.c.db.ondigitalocean.com:25060/utp_group_db
